updated images names and logo/emblem fix for teams page football

--- a/markup/_dist/create_helmet.html
+++ b/markup/_dist/create_helmet.html
@@ -143,7 +143,7 @@
                   <div class="letter"><a onclick="showletter('h.png')" class="pointer"><img src="assets/img/letter/h.png" alt=""></a></div>
                   <div class="letter"><a onclick="showletter('i.png')" class="pointer"><img src="assets/img/letter/i.png" alt=""></a></div>
                   <div class="letter"><a onclick="showletter('j.png')" class="pointer"><img src="assets/img/letter/j.png" alt=""></a></div>
-                  <div class="letter"><a onclick="showletter('k.png')" class="pointer"><img src="assets/img/letter/k.png" alt=""></a></div>
+                  <div class="letter"><a onclick="showletter('k.png')" class="pointer"><img src="assets/img/letter/img-K.png" alt=""></a></div>
                   <div class="letter"><a onclick="showletter('l.png')" class="pointer"><img src="assets/img/letter/l.png" alt=""></a></div>
                   <div class="letter"><a onclick="showletter('m.png')" class="pointer"><img src="assets/img/letter/m.png" alt=""></a></div>
                   <div class="letter"><a onclick="showletter('n.png')" class="pointer"><img src="assets/img/letter/n.png" alt=""></a></div>
