--- a/markup/_dist/live_score.html
+++ b/markup/_dist/live_score.html
@@ -569,56 +569,56 @@
                 <div class="midfielder-line"></div>
                 <div class="defender-line"></div>
                 <div class="player-main-block football">
-                  <div data-position="FLEX" class="nl-player-block nl-FLEX-position"><img src="assets/img/football/FLEX.png" alt="FLEX">
+                  <div data-position="FLEX" class="nl-player-block nl-FLEX-position"><img src="assets/img/football/img-FLEX.png" alt="FLEX">
                     <div class="nl-player-block--data">
                       <p class="played">gronkowski</p>
                       <p class="data">FP <span class="orange">12.67</span> </p>
                       <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
-                  <div data-position="K" class="nl-player-block nl-K-position"><img src="assets/img/football/K.png" alt="K">
+                  <div data-position="K" class="nl-player-block nl-K-position"><img src="assets/img/football/img-K.png" alt="K">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data">FP <span class="orange">12.67</span> </p>
                       <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
-                  <div data-position="LRB" class="nl-player-block nl-LRB-position"><img src="assets/img/football/LRB.png" alt="LRB">
+                  <div data-position="LRB" class="nl-player-block nl-LRB-position"><img src="assets/img/football/img-LRB.png" alt="LRB">
                     <div class="nl-player-block--data">
                       <p class="playing">gronkowski</p>
                       <p class="data">FP <span class="orange">12.67</span> </p>
                       <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
-                  <div data-position="RRB" class="nl-player-block nl-RRB-position"><img src="assets/img/football/RRB.png" alt="RRB">
+                  <div data-position="RRB" class="nl-player-block nl-RRB-position"><img src="assets/img/football/img-RRB.png" alt="RRB">
                     <div class="nl-player-block--data">
                       <p class="played">gronkowski</p>
                       <p class="data">FP <span class="orange">12.67</span> </p>
                       <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
-                  <div data-position="QB" class="nl-player-block nl-QB-position"><img src="assets/img/football/QB.png" alt="QB">
+                  <div data-position="QB" class="nl-player-block nl-QB-position"><img src="assets/img/football/img-QB.png" alt="QB">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data">FP <span class="orange">12.67</span> </p>
                       <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
-                  <div data-position="LWR" class="nl-player-block nl-LWR-position"><img src="assets/img/football/LWR.png" alt="LWR">
+                  <div data-position="LWR" class="nl-player-block nl-LWR-position"><img src="assets/img/football/img-LWR.png" alt="LWR">
                     <div class="nl-player-block--data">
                       <p class="not-playing">gronkowski</p>
                       <p class="data">FP <span class="orange">12.67</span> </p>
                       <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
-                  <div data-position="RWR" class="nl-player-block nl-RWR-position"><img src="assets/img/football/RWR.png" alt="RWR">
+                  <div data-position="RWR" class="nl-player-block nl-RWR-position"><img src="assets/img/football/img-RWR.png" alt="RWR">
                     <div class="nl-player-block--data">
                       <p class="playing">gronkowski</p>
                       <p class="data">FP <span class="orange">12.67</span> </p>
                       <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
-                  <div data-position="TE" class="nl-player-block nl-TE-position"><img src="assets/img/football/TE.png" alt="TE">
+                  <div data-position="TE" class="nl-player-block nl-TE-position"><img src="assets/img/football/img-TE.png" alt="TE">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data">FP <span class="orange">12.67</span> </p>
@@ -2278,7 +2278,7 @@
             </div>
             <div class="nl-team-field football">
               <div class="player-main-block">
-                <div data-position="QB" class="nl-player-block nl-QB-position"><img src="assets/img/football/img-QB.png" alt="QB">
+                <div data-position="QB" class="nl-player-block nl-QB-position"><img src="assets/img/football/img-img-QB.png" alt="QB">
                   <div class="nl-player-block--data">
                     <p>gronkowski</p>
                     <p class="data orange"><span>12.67</span> <span>$42000</span></p>
