--- a/markup/_dist/create_team.html
+++ b/markup/_dist/create_team.html
@@ -1265,13 +1265,13 @@
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="DL" class="nl-player-block nl-DL-position"><img src="assets/img/soccer/D-L.png" alt="goalkeeper">
+                  <div data-position="DL" class="nl-player-block nl-DL-position"><img src="assets/img/soccer/DL.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="DR" class="nl-player-block nl-DR-position"><img src="assets/img/soccer/D-R.png" alt="goalkeeper">
+                  <div data-position="DR" class="nl-player-block nl-DR-position"><img src="assets/img/soccer/DR.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
@@ -1283,25 +1283,25 @@
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="DM" class="nl-player-block nl-DM-position"><img src="assets/img/soccer/D-M.png" alt="goalkeeper">
+                  <div data-position="DM" class="nl-player-block nl-DM-position"><img src="assets/img/soccer/DM.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="MM" class="nl-player-block nl-MM-position"><img src="assets/img/soccer/M-M.png" alt="goalkeeper">
+                  <div data-position="MM" class="nl-player-block nl-MM-position"><img src="assets/img/soccer/MM.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="MR" class="nl-player-block nl-MR-position"><img src="assets/img/soccer/M-R.png" alt="goalkeeper">
+                  <div data-position="MR" class="nl-player-block nl-MR-position"><img src="assets/img/soccer/MM.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="ML" class="nl-player-block nl-ML-position"><img src="assets/img/soccer/M-L.png" alt="goalkeeper">
+                  <div data-position="ML" class="nl-player-block nl-ML-position"><img src="assets/img/soccer/ML.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
@@ -1313,13 +1313,13 @@
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="AL" class="nl-player-block nl-AL-position"><img src="assets/img/soccer/A-L.png" alt="goalkeeper">
+                  <div data-position="AL" class="nl-player-block nl-AL-position"><img src="assets/img/soccer/AL.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="AR" class="nl-player-block nl-AR-position"><img src="assets/img/soccer/A-R.png" alt="goalkeeper">
+                  <div data-position="AR" class="nl-player-block nl-AR-position"><img src="assets/img/soccer/AR.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
