image names soccer flex shirts

--- a/markup/_dist/enter_contests.html
+++ b/markup/_dist/enter_contests.html
@@ -167,7 +167,7 @@
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="FLEXL" class="nl-player-block nl-FLEXL-position"><img src="assets/img/soccer/FLEX-L.png" alt="goalkeeper">
+                  <div data-position="FLEXL" class="nl-player-block nl-FLEXL-position"><img src="assets/img/soccer/FLEXL.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
@@ -197,7 +197,7 @@
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="FLEXR" class="nl-player-block nl-FLEXR-position"><img src="assets/img/soccer/FLEX-R.png" alt="goalkeeper">
+                  <div data-position="FLEXR" class="nl-player-block nl-FLEXR-position"><img src="assets/img/soccer/FLEXR.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data orange"><span>12.67</span> <span>$42000</span></p>
