--- a/markup/_dist/live_score_soccer.html
+++ b/markup/_dist/live_score_soccer.html
@@ -587,7 +587,7 @@
                       <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
-                  <div data-position="FLEXL" class="nl-player-block nl-FLEXL-position"><img src="assets/img/soccer/FLEX-L.png" alt="goalkeeper">
+                  <div data-position="FLEXL" class="nl-player-block nl-FLEXL-position"><img src="assets/img/soccer/FLEXL.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <p class="played">Ronaldo</p>
                       <p class="data">FP <span class="orange">12.67</span> </p>
@@ -622,7 +622,7 @@
                       <p class="data">Score <span class="orange">15</span></p>
                     </div>
                   </div>
-                  <div data-position="FLEXR" class="nl-player-block nl-FLEXR-position"><img src="assets/img/soccer/FLEX-R.png" alt="goalkeeper">
+                  <div data-position="FLEXR" class="nl-player-block nl-FLEXR-position"><img src="assets/img/soccer/FLEXR.png" alt="goalkeeper">
                     <div class="nl-player-block--data">
                       <p class="not-playing">Ronaldo</p>
                       <p class="data">FP <span class="orange">12.67</span> </p>
