--- a/markup/_dist/homepage_soccer.html
+++ b/markup/_dist/homepage_soccer.html
@@ -1385,7 +1385,7 @@
                             <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                           </div>
                         </div>
-                        <div data-position="FLEXL" class="nl-player-block nl-FLEXL-position"><img src="assets/img/soccer/FLEX-L.png" alt="goalkeeper">
+                        <div data-position="FLEXL" class="nl-player-block nl-FLEXL-position"><img src="assets/img/soccer/FLEXL.png" alt="goalkeeper">
                           <div class="nl-player-block--data">
                             <p>Kroos</p>
                             <p class="data orange"><span>12.67</span> <span>$42000</span></p>
@@ -1415,7 +1415,7 @@
                             <p class="data orange"><span>12.67</span> <span>$42000</span></p>
                           </div>
                         </div>
-                        <div data-position="FLEXR" class="nl-player-block nl-FLEXR-position"><img src="assets/img/soccer/FLEX-R.png" alt="goalkeeper">
+                        <div data-position="FLEXR" class="nl-player-block nl-FLEXR-position"><img src="assets/img/soccer/FLEXR.png" alt="goalkeeper">
                           <div class="nl-player-block--data">
                             <p>Van Persie</p>
                             <p class="data orange"><span>12.67</span> <span>$42000</span></p>
