--- a/markup/_dist/homepage.html
+++ b/markup/_dist/homepage.html
@@ -193,7 +193,7 @@
                 <div role="tabpanel" id="RB" class="tab-pane active top-level-panel">
                   <div class="content">
                     <div class="row">
-                      <div class="col-lg-12 menubar">
+                      <div class="col-lg-12 menubar no-padding-all-sides">
                         <div id="carouselTop5Players" data-ride="carousel" class="carousel slide"> 
                           <ul role="tablist" class="nav menu">
                             <li class="nav-item"><a href="" data-target="#carouselTop5Players" data-slide-to="0" class="active">
@@ -274,147 +274,113 @@
                           </ul>
                           <div class="carousel-inner">
                             <div class="carousel-item active">
-                              <div class="tab-content">
-                                <div id="player1" role="tabpanel" class="tab-pane active">
-                                  <div class="row player">
-                                    <div id="top5-players-picture" style="display: block;"><img id="top-player" src="assets/img/player1.png" style="display: block;">
-                                      <div class="player-image-inner">
-                                        <div class="number">
-                                          <p>1</p>
-                                        </div>
-                                        <div class="name">
-                                          <p>Rob Grownkowski</p>
-                                        </div>
-                                        <div class="points-in-bar">
-                                          <p class="points">121 PTS </p>
-                                        </div>
+                              <div class="row new-top5-players-container">
+                                <div class="col-7 no-padding">
+                                  <div class="new-above-table">
+                                    <h3 class="rank-number">rank 1 </h3>
+                                    <h3 class="player-name">A Great Playerrrr</h3>
+                                    <div class="row player-stats">
+                                      <div class="col-4 no-padding"><img id="top-player-nav" src="assets/img/player1-new.png"></div>
+                                      <div class="col-4 player-data">
+                                        <p>Team</p>
+                                        <p class="orange">Patriots</p>
+                                        <p>Pos</p>
+                                        <p class="orange">RB</p>
+                                      </div>
+                                      <div class="col-4 player-data">
+                                        <p>Salary </p>
+                                        <p class="orange">$3200</p>
+                                        <p>Score </p>
+                                        <p class="orange">13.4</p>
                                       </div>
                                     </div>
-                                    <div class="player-info">
-                                      <p>FP points</p>
-                                      <h5>121.5</h5>
-                                      <p>Salary</p>
-                                      <h5>$7100</h5>
-                                      <p>Team Name</p>
-                                      <h5>Barcelona</h5>
-                                      <p>More info </p><i class="fa fa-info-circle"> </i>
-                                    </div>
                                   </div>
+                                  <div class="tab-content">
+                                    <table class="table table-striped new-top5-table">
+                                      <thead>
+                                        <tr>
+                                          <th>week</th>
+                                          <th>opp</th>
+                                          <th>paatt</th>
+                                          <th>pacm</th>
+                                          <th>payd</th>
+                                          <th>patd</th>
+                                          <th>paint</th>
+                                          <th>ruyd</th>
+                                          <th>rutd</th>
+                                        </tr>
+                                      </thead>
+                                      <tbody>
+                                        <tr>
+                                          <td>124</td>
+                                          <td>JAX</td>
+                                          <td>30</td>
+                                          <td>$0</td>
+                                          <td>234</td>
+                                          <td>324</td>
+                                          <td>30</td>
+                                          <td>$0</td>
+                                          <td>765</td>
+                                        </tr>
+                                        <tr>
+                                          <td>124</td>
+                                          <td>JAX</td>
+                                          <td>30</td>
+                                          <td>$0</td>
+                                          <td>234</td>
+                                          <td>324</td>
+                                          <td>30</td>
+                                          <td>$0</td>
+                                          <td>765</td>
+                                        </tr>
+                                        <tr>
+                                          <td>124</td>
+                                          <td>JAX</td>
+                                          <td>30</td>
+                                          <td>$0</td>
+                                          <td>234</td>
+                                          <td>324</td>
+                                          <td>30</td>
+                                          <td>$0</td>
+                                          <td>765</td>
+                                        </tr>
+                                        <tr>
+                                          <td>124</td>
+                                          <td>JAX</td>
+                                          <td>30</td>
+                                          <td>$0</td>
+                                          <td>234</td>
+                                          <td>324</td>
+                                          <td>30</td>
+                                          <td>$0</td>
+                                          <td>765</td>
+                                        </tr>
+                                        <tr>
+                                          <td>124</td>
+                                          <td>JAX</td>
+                                          <td>30</td>
+                                          <td>$0</td>
+                                          <td>234</td>
+                                          <td>324</td>
+                                          <td>30</td>
+                                          <td>$0</td>
+                                          <td>765</td>
+                                        </tr>
+                                      </tbody>
+                                    </table>
+                                  </div>
+                                </div>
+                                <div class="col-5 new-news-player">
+                                  <h5>Todd Gurley Bounces Back In Victory Over Jags</h5>
+                                  <p>Los Angeles Chargers quarterback Philip Rivers had a solid week against the weak Oakland secondary.</p>
+                                  <p><a href="#">more...</a></p>
+                                  <h5>Todd Gurley Bounces Back In Victory Over Jags</h5>
+                                  <p>Los Angeles Chargers quarterback Philip Rivers had a solid week against the weak Oakland secondary.</p>
+                                  <p><a href="#">more...</a></p>
                                 </div>
                               </div>
                             </div>
-                            <div class="carousel-item">
-                              <div class="tab-content">
-                                <div id="player1" role="tabpanel" class="tab-pane active">
-                                  <div class="row player">
-                                    <div id="top5-players-picture" style="display: block;"><img id="top-player" src="assets/img/player2.png" style="display: block;">
-                                      <div class="player-image-inner">
-                                        <div class="number">
-                                          <p>2</p>
-                                        </div>
-                                        <div class="name">
-                                          <p>Odell Beckham JR.</p>
-                                        </div>
-                                        <p class="points">121 PTS </p>
-                                      </div>
-                                    </div>
-                                    <div class="player-info">
-                                      <p>FP points</p>
-                                      <h5>121.5</h5>
-                                      <p>Salary</p>
-                                      <h5>$7100</h5>
-                                      <p>Team Name</p>
-                                      <h5>Barcelona</h5>
-                                      <p>More info </p><i class="fa fa-info-circle"> </i>
-                                    </div>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="carousel-item">
-                              <div class="tab-content">
-                                <div id="player1" role="tabpanel" class="tab-pane active">
-                                  <div class="row player">
-                                    <div id="top5-players-picture" style="display: block;"><img id="top-player" src="assets/img/player3.png" style="display: block;">
-                                      <div class="player-image-inner">
-                                        <div class="number">
-                                          <p>3</p>
-                                        </div>
-                                        <div class="name">
-                                          <p>Matt Ryan</p>
-                                        </div>
-                                        <p class="points">121 PTS </p>
-                                      </div>
-                                    </div>
-                                    <div class="player-info">
-                                      <p>FP points</p>
-                                      <h5>121.5</h5>
-                                      <p>Salary</p>
-                                      <h5>$7100</h5>
-                                      <p>Team Name</p>
-                                      <h5>Barcelona</h5>
-                                      <p>More info </p><i class="fa fa-info-circle"> </i>
-                                    </div>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="carousel-item">
-                              <div class="tab-content">
-                                <div id="player1" role="tabpanel" class="tab-pane active">
-                                  <div class="row player">
-                                    <div id="top5-players-picture" style="display: block;"><img id="top-player" src="assets/img/player4.png" style="display: block;">
-                                      <div class="player-image-inner">
-                                        <div class="number">
-                                          <p>4</p>
-                                        </div>
-                                        <div class="name">
-                                          <p>Aaron Rodgers</p>
-                                        </div>
-                                        <p class="points">121 PTS </p>
-                                      </div>
-                                    </div>
-                                    <div class="player-info">
-                                      <p>FP points</p>
-                                      <h5>121.5</h5>
-                                      <p>Salary</p>
-                                      <h5>$7100</h5>
-                                      <p>Team Name</p>
-                                      <h5>Barcelona</h5>
-                                      <p>More info </p><i class="fa fa-info-circle"> </i>
-                                    </div>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="carousel-item">
-                              <div class="tab-content">
-                                <div id="player1" role="tabpanel" class="tab-pane active">
-                                  <div class="row player">
-                                    <div id="top5-players-picture" style="display: block;"><img id="top-player" src="assets/img/player5.png" style="display: block;">
-                                      <div class="player-image-inner">
-                                        <div class="number">
-                                          <p>5</p>
-                                        </div>
-                                        <div class="name">
-                                          <p>David Johnson</p>
-                                        </div>
-                                        <p class="points">121 PTS </p>
-                                      </div>
-                                    </div>
-                                    <div class="player-info">
-                                      <p>FP points</p>
-                                      <h5>121.5</h5>
-                                      <p>Salary</p>
-                                      <h5>$7100</h5>
-                                      <p>Team Name</p>
-                                      <h5>Barcelona</h5>
-                                      <p>More info </p><i class="fa fa-info-circle"> </i>
-                                    </div>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
+                            
                           </div>
                         </div>
                       </div>
