desktop version of new top 5

--- a/markup/_dist/homepage.html
+++ b/markup/_dist/homepage.html
@@ -278,19 +278,23 @@
                                 <div class="col-7 no-padding">
                                   <div class="new-above-table">
                                     <h3 class="rank-number">rank 1 </h3>
-                                    <h3 class="player-name">A Great Playerrrr</h3>
+                                    <div class="row">
+                                      <div class="col-12 text-center">
+                                        <h3 class="player-name">DeAndre Hopkins</h3>
+                                      </div>
+                                    </div>
                                     <div class="row player-stats">
                                       <div class="col-4 no-padding"><img id="top-player-nav" src="assets/img/player1-new.png"></div>
                                       <div class="col-4 player-data">
-                                        <p>Team</p>
+                                        <p class="title">TEAM</p>
                                         <p class="orange">Patriots</p>
-                                        <p>Pos</p>
+                                        <p class="title">POS</p>
                                         <p class="orange">RB</p>
                                       </div>
                                       <div class="col-4 player-data">
-                                        <p>Salary </p>
+                                        <p class="title">SALARY </p>
                                         <p class="orange">$3200</p>
-                                        <p>Score </p>
+                                        <p class="title">SCORE </p>
                                         <p class="orange">13.4</p>
                                       </div>
                                     </div>
@@ -370,7 +374,7 @@
                                     </table>
                                   </div>
                                 </div>
-                                <div class="col-5 new-news-player">
+                                <div class="col-4 new-news-player">
                                   <h5>Todd Gurley Bounces Back In Victory Over Jags</h5>
                                   <p>Los Angeles Chargers quarterback Philip Rivers had a solid week against the weak Oakland secondary.</p>
                                   <p><a href="#">more...</a></p>
