placeholders football field

--- a/markup/_dist/create_team_football.html
+++ b/markup/_dist/create_team_football.html
@@ -139,7 +139,8 @@
                   </div>
                 </div>
                 <ul role="tablist" class="nav nav-tabs">
-                  <li class="nav-item"><a data-toggle="tab" href="#all" role="tab" class="nav-link active">All players</a></li>
+                  <li class="nav-item hidden-xs-down"><a data-toggle="tab" href="#all" role="tab" class="nav-link active">All players</a></li>
+                  <li class="nav-item hidden-sm-up"><a data-toggle="tab" href="#all" role="tab" class="nav-link active">All</a></li>
                   <li class="nav-item"><a data-toggle="tab" href="#qb" role="tab" class="nav-link">QB</a></li>
                   <li class="nav-item"><a data-toggle="tab" href="#rb" role="tab" class="nav-link">RB</a></li>
                   <li class="nav-item"><a data-toggle="tab" href="#wr" role="tab" class="nav-link">WR</a></li>
@@ -1184,67 +1185,76 @@
               </div>
               <div class="nl-team-field football">
                 <div class="player-main-block football">
-                  <div data-position="FLEX" class="nl-player-block nl-FLEX-position"><img src="assets/img/football/img-FLEX.png" alt="FLEX">
+                  <div data-position="FLEX" class="nl-player-block nl-FLEX-position"><img src="assets/img/football/img-FLEX.png" alt="FLEX" class="vis-hidden">
                     <div class="nl-player-block--data">
-                      <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
-                      <p>gronkowski</p>
-                      <p class="data orange"><span>12.67</span> <span>$42000</span></p>
+                      <button type="button" class="btn btn-link btn-player-close vis-hidden"><i class="fa fa-close" aria-hidden="true"></i></button>
+                      <p class="display-none">gronkowski</p>
+                      <p class="placeholder">FLEX</p>
+                      <p class="data orange display-none"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="K" class="nl-player-block nl-K-position"><img src="assets/img/football/img-K.png" alt="K">
+                  <div data-position="K" class="nl-player-block nl-K-position"><img src="assets/img/football/img-K.png" alt="K" class="vis-hidden">
                     <div class="nl-player-block--data">
-                      <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
-                      <p>gronkowski</p>
-                      <p class="data orange"><span>12.67</span> <span>$42000</span></p>
+                      <button type="button" class="btn btn-link btn-player-close vis-hidden"><i class="fa fa-close" aria-hidden="true"></i></button>
+                      <p class="display-none">gronkowski</p>
+                      <p class="placeholder">K</p>
+                      <p class="data orange display-none"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="LRB" class="nl-player-block nl-LRB-position"><img src="assets/img/football/img-LRB.png" alt="LRB">
+                  <div data-position="LRB" class="nl-player-block nl-LRB-position"><img src="assets/img/football/img-LRB.png" alt="LRB" class="vis-hidden">
                     <div class="nl-player-block--data">
-                      <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
-                      <p>gronkowski</p>
-                      <p class="data orange"><span>12.67</span> <span>$42000</span></p>
+                      <button type="button" class="btn btn-link btn-player-close vis-hidden"><i class="fa fa-close" aria-hidden="true"></i></button>
+                      <p class="display-none">gronkowski</p>
+                      <p class="placeholder">RB</p>
+                      <p class="data orange display-none"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="RRB" class="nl-player-block nl-RRB-position"><img src="assets/img/football/img-RRB.png" alt="RRB">
+                  <div data-position="RRB" class="nl-player-block nl-RRB-position"><img src="assets/img/football/img-RRB.png" alt="RRB" class="vis-hidden">
                     <div class="nl-player-block--data">
-                      <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
-                      <p>gronkowski</p>
-                      <p class="data orange"><span>12.67</span> <span>$42000</span></p>
+                      <button type="button" class="btn btn-link btn-player-close vis-hidden"><i class="fa fa-close" aria-hidden="true"></i></button>
+                      <p class="display-none">gronkowski</p>
+                      <p class="placeholder">RB</p>
+                      <p class="data orange display-none"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="QB" class="nl-player-block nl-QB-position"><img src="assets/img/football/img-QB.png" alt="QB">
+                  <div data-position="QB" class="nl-player-block nl-QB-position"><img src="assets/img/football/img-QB.png" alt="QB" class="vis-hidden">
                     <div class="nl-player-block--data">
-                      <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
-                      <p>gronkowski</p>
-                      <p class="data orange"><span>12.67</span> <span>$42000</span></p>
+                      <button type="button" class="btn btn-link btn-player-close vis-hidden"><i class="fa fa-close" aria-hidden="true"></i></button>
+                      <p class="display-none">gronkowski</p>
+                      <p class="placeholder">QB</p>
+                      <p class="data orange display-none"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="LWR" class="nl-player-block nl-LWR-position"><img src="assets/img/football/img-LWR.png" alt="LWR">
+                  <div data-position="LWR" class="nl-player-block nl-LWR-position"><img src="assets/img/football/img-LWR.png" alt="LWR" class="vis-hidden">
                     <div class="nl-player-block--data">
-                      <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
-                      <p>gronkowski</p>
-                      <p class="data orange"><span>12.67</span> <span>$42000</span></p>
+                      <button type="button" class="btn btn-link btn-player-close vis-hidden"><i class="fa fa-close" aria-hidden="true"></i></button>
+                      <p class="display-none">gronkowski</p>
+                      <p class="placeholder">WR</p>
+                      <p class="data orange display-none"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="RWR" class="nl-player-block nl-RWR-position"><img src="assets/img/football/img-RWR.png" alt="RWR">
+                  <div data-position="RWR" class="nl-player-block nl-RWR-position"><img src="assets/img/football/img-RWR.png" alt="RWR" class="vis-hidden">
                     <div class="nl-player-block--data">
-                      <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
-                      <p>gronkowski</p>
-                      <p class="data orange"><span>12.67</span> <span>$42000</span></p>
+                      <button type="button" class="btn btn-link btn-player-close vis-hidden"><i class="fa fa-close" aria-hidden="true"></i></button>
+                      <p class="display-none">gronkowski</p>
+                      <p class="placeholder">WR</p>
+                      <p class="data orange display-none"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="TE" class="nl-player-block nl-TE-position"><img src="assets/img/football/img-TE.png" alt="TE">
+                  <div data-position="TE" class="nl-player-block nl-TE-position"><img src="assets/img/football/img-TE.png" alt="TE" class="vis-hidden">
                     <div class="nl-player-block--data">
-                      <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
-                      <p>gronkowski</p>
-                      <p class="data orange"><span>12.67</span> <span>$42000</span></p>
+                      <button type="button" class="btn btn-link btn-player-close vis-hidden"><i class="fa fa-close" aria-hidden="true"></i></button>
+                      <p class="display-none">gronkowski</p>
+                      <p class="placeholder">TE</p>
+                      <p class="data orange display-none"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="DEF" class="nl-player-block nl-DEF-position"><img src="assets/img/helmet-3" alt="logo">
+                  <div data-position="DEF" class="nl-player-block nl-DEF-position"><img src="assets/img/helmet-3" alt="logo" class="vis-hidden">
                     <div class="nl-player-block--data">
-                      <button type="button" class="btn btn-link btn-player-close"><i class="fa fa-close" aria-hidden="true"></i></button>
-                      <p>PATRIOTS</p>
-                      <p class="data orange"><span>12.67</span> <span>$42000</span></p>
+                      <button type="button" class="btn btn-link btn-player-close vis-hidden"><i class="fa fa-close" aria-hidden="true"></i></button>
+                      <p class="display-none">Patriots</p>
+                      <p class="placeholder">DEF</p>
+                      <p class="data orange display-none"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
                 </div>
