update top 5 players responsiveness

--- a/markup/_dist/homepage.html
+++ b/markup/_dist/homepage.html
@@ -199,7 +199,7 @@
                             <li class="nav-item"><a href="" data-target="#carouselTop5Players" data-slide-to="0" class="active">
                                 <div class="menu-item top-5">
                                   <div class="players"> 
-                                    <div id="top5-players-nav" style="display: block;"><img id="top-player-nav" src="assets/img/player1.png" style="display: block;"></div>
+                                    <div id="top5-players-nav" style="display: block;"><img id="top-player-nav" src="assets/img/player1-new.png" style="display: block;"></div>
                                     <div class="number">
                                       <p>1</p>
                                     </div>
@@ -214,7 +214,7 @@
                             <li class="nav-item"><a href="" data-target="#carouselTop5Players" data-slide-to="1" class="active">
                                 <div class="menu-item top-5">
                                   <div class="players"> 
-                                    <div id="top5-players-nav" style="display: block;"><img id="top-player-nav" src="assets/img/player2.png" style="display: block;"></div>
+                                    <div id="top5-players-nav" style="display: block;"><img id="top-player-nav" src="assets/img/player1-new.png" style="display: block;"></div>
                                     <div class="number">
                                       <p>2</p>
                                     </div>
@@ -229,7 +229,7 @@
                             <li class="nav-item"><a href="" data-target="#carouselTop5Players" data-slide-to="2" class="active">
                                 <div class="menu-item top-5">
                                   <div class="players"> 
-                                    <div id="top5-players-nav" style="display: block;"><img id="top-player-nav" src="assets/img/player3.png" style="display: block;"></div>
+                                    <div id="top5-players-nav" style="display: block;"><img id="top-player-nav" src="assets/img/player1-new.png" style="display: block;"></div>
                                     <div class="number">
                                       <p>3</p>
                                     </div>
@@ -244,7 +244,7 @@
                             <li class="nav-item"><a href="" data-target="#carouselTop5Players" data-slide-to="3" class="active">
                                 <div class="menu-item top-5">
                                   <div class="players"> 
-                                    <div id="top5-players-nav" style="display: block;"><img id="top-player-nav" src="assets/img/player4.png" style="display: block;"></div>
+                                    <div id="top5-players-nav" style="display: block;"><img id="top-player-nav" src="assets/img/player1-new.png" style="display: block;"></div>
                                     <div class="number">
                                       <p>4</p>
                                     </div>
@@ -259,7 +259,7 @@
                             <li class="nav-item"><a href="" data-target="#carouselTop5Players" data-slide-to="4" class="active">
                                 <div class="menu-item top-5">
                                   <div class="players"> 
-                                    <div id="top5-players-nav" style="display: block;"><img id="top-player-nav" src="assets/img/player5.png" style="display: block;"></div>
+                                    <div id="top5-players-nav" style="display: block;"><img id="top-player-nav" src="assets/img/player1-new.png" style="display: block;"></div>
                                     <div class="number">
                                       <p>5</p>
                                     </div>
@@ -274,17 +274,18 @@
                           </ul>
                           <div class="carousel-inner">
                             <div class="carousel-item active">
-                              <div class="row new-top5-players-container">
-                                <div class="col-7 no-padding">
+                              <div class="new-top5-players-container">
+                                <div class="stats-table">
                                   <div class="new-above-table">
-                                    <h3 class="rank-number">rank 1 </h3>
                                     <div class="row">
                                       <div class="col-12 text-center">
                                         <h3 class="player-name">DeAndre Hopkins</h3>
                                       </div>
                                     </div>
                                     <div class="row player-stats">
-                                      <div class="col-4 no-padding"><img id="top-player-nav" src="assets/img/player1-new.png"></div>
+                                      <div class="col-4 no-padding player-image-container">
+                                        <h3 class="rank-number">rank 1 </h3><img id="top-player-nav" src="assets/img/player1-new.png">
+                                      </div>
                                       <div class="col-4 player-data">
                                         <p class="title">TEAM</p>
                                         <p class="orange">Patriots</p>
@@ -370,11 +371,39 @@
                                           <td>$0</td>
                                           <td>765</td>
                                         </tr>
+                                        <tr>
+                                          <td>124</td>
+                                          <td>JAX</td>
+                                          <td>30</td>
+                                          <td>$0</td>
+                                          <td>234</td>
+                                          <td>324</td>
+                                          <td>30</td>
+                                          <td>$0</td>
+                                          <td>765</td>
+                                        </tr>
+                                        <tr>
+                                          <td>124</td>
+                                          <td>JAX</td>
+                                          <td>30</td>
+                                          <td>$0</td>
+                                          <td>234</td>
+                                          <td>324</td>
+                                          <td>30</td>
+                                          <td>$0</td>
+                                          <td>765</td>
+                                        </tr>
                                       </tbody>
                                     </table>
                                   </div>
                                 </div>
-                                <div class="col-4 new-news-player">
+                                <div class="new-news-player">
+                                  <h5>Todd Gurley Bounces Back In Victory Over Jags</h5>
+                                  <p>Los Angeles Chargers quarterback Philip Rivers had a solid week against the weak Oakland secondary.</p>
+                                  <p><a href="#">more...</a></p>
+                                  <h5>Todd Gurley Bounces Back In Victory Over Jags</h5>
+                                  <p>Los Angeles Chargers quarterback Philip Rivers had a solid week against the weak Oakland secondary.</p>
+                                  <p><a href="#">more...</a></p>
                                   <h5>Todd Gurley Bounces Back In Victory Over Jags</h5>
                                   <p>Los Angeles Chargers quarterback Philip Rivers had a solid week against the weak Oakland secondary.</p>
                                   <p><a href="#">more...</a></p>
@@ -513,7 +542,7 @@
                             <li class="nav-item"><a data-target="#carouselTop5Managers" href="" data-slide-to="0" class="active">
                                 <div class="menu-item top-5">
                                   <div class="players"> 
-                                    <div id="top5-managers-nav" style="display: block;"><img id="top-manager-nav" src="assets/img/about/person1.png" style="display: block;"></div>
+                                    <div id="top5-managers-nav" style="display: block;"><img id="top-manager-nav" src="assets/img/white-helmet.png" style="display: block;"></div>
                                     <div class="number">
                                       <p>1</p>
                                     </div>
@@ -528,7 +557,7 @@
                             <li class="nav-item"><a data-target="#carouselTop5Managers" href="" data-slide-to="1">
                                 <div class="menu-item top-5">
                                   <div class="players"> 
-                                    <div id="top5-managers-nav" style="display: block;"><img id="top-manager-nav" src="assets/img/about/person11.png" style="display: block;"></div>
+                                    <div id="top5-managers-nav" style="display: block;"><img id="top-manager-nav" src="assets/img/white-helmet.png" style="display: block;"></div>
                                     <div class="number">
                                       <p>2</p>
                                     </div>
@@ -543,7 +572,7 @@
                             <li class="nav-item"><a data-target="#carouselTop5Managers" href="" data-slide-to="2">
                                 <div class="menu-item top-5">
                                   <div class="players"> 
-                                    <div id="top5-managers-nav" style="display: block;"><img id="top-manager-nav" src="assets/img/about/person10.png" style="display: block;"></div>
+                                    <div id="top5-managers-nav" style="display: block;"><img id="top-manager-nav" src="assets/img/white-helmet.png" style="display: block;"></div>
                                     <div class="number">
                                       <p>3</p>
                                     </div>
@@ -558,7 +587,7 @@
                             <li class="nav-item"><a data-target="#carouselTop5Managers" href="" data-slide-to="3">
                                 <div class="menu-item top-5">
                                   <div class="players"> 
-                                    <div id="top5-managers-nav" style="display: block;"><img id="top-manager-nav" src="assets/img/about/person4.png" style="display: block;"></div>
+                                    <div id="top5-managers-nav" style="display: block;"><img id="top-manager-nav" src="assets/img/white-helmet.png" style="display: block;"></div>
                                     <div class="number">
                                       <p>4</p>
                                     </div>
@@ -573,7 +602,7 @@
                             <li class="nav-item"><a data-target="#carouselTop5Managers" href="" data-slide-to="4">
                                 <div class="menu-item top-5">
                                   <div class="players"> 
-                                    <div id="top5-managers-nav" style="display: block;"><img id="top-manager-nav" src="assets/img/about/person5.png" style="display: block;"></div>
+                                    <div id="top5-managers-nav" style="display: block;"><img id="top-manager-nav" src="assets/img/white-helmet.png" style="display: block;"></div>
                                     <div class="number">
                                       <p>5</p>
                                     </div>
@@ -592,7 +621,7 @@
                                 <div id="manager1" role="tabpanel" class="tab-pane active">
                                   <div class="row player">
                                     <div class="col-12 col-xs-5 hidden-md-down col-lg-5 no-padding">
-                                      <div id="top5-managers-picture" style="display: block;"><img id="top-manager" src="assets/img/about/person1.png" style="display: block;" class="img-fluid">
+                                      <div id="top5-managers-picture" style="display: block;"><img id="top-manager" src="assets/img/white-helmet.png" style="display: block;" class="img-fluid">
                                         <div class="manager-image-inner">
                                           <div class="number">
                                             <p>1</p>
@@ -718,7 +747,7 @@
                                 <div id="manager1" role="tabpanel" class="tab-pane active">
                                   <div class="row player">
                                     <div class="col-12 col-xs-5 hidden-md-down col-lg-5">
-                                      <div id="top5-managers-picture" style="display: block;"><img id="top-manager" src="assets/img/about/person11.png" style="display: block;" class="img-fluid">
+                                      <div id="top5-managers-picture" style="display: block;"><img id="top-manager" src="assets/img/white-helmet.png" style="display: block;" class="img-fluid">
                                         <div class="manager-image-inner">
                                           <div class="number">
                                             <p>2</p>
@@ -844,7 +873,7 @@
                                 <div id="manager1" role="tabpanel" class="tab-pane active">
                                   <div class="row player">
                                     <div class="col-12 col-xs-5 hidden-md-down col-lg-5">
-                                      <div id="top5-managers-picture" style="display: block;"><img id="top-manager" src="assets/img/about/person10.png" style="display: block;" class="img-fluid">
+                                      <div id="top5-managers-picture" style="display: block;"><img id="top-manager" src="assets/img/white-helmet.png" style="display: block;" class="img-fluid">
                                         <div class="manager-image-inner">
                                           <div class="number">
                                             <p>3</p>
@@ -970,7 +999,7 @@
                                 <div id="manager1" role="tabpanel" class="tab-pane active">
                                   <div class="row player">
                                     <div class="col-12 col-xs-5 hidden-md-down col-lg-5">
-                                      <div id="top5-managers-picture" style="display: block;"><img id="top-manager" src="assets/img/about/person4.png" style="display: block;" class="img-fluid">
+                                      <div id="top5-managers-picture" style="display: block;"><img id="top-manager" src="assets/img/white-helmet.png" style="display: block;" class="img-fluid">
                                         <div class="manager-image-inner">
                                           <div class="number">
                                             <p>4</p>
@@ -1096,7 +1125,7 @@
                                 <div id="manager1" role="tabpanel" class="tab-pane active">
                                   <div class="row player">
                                     <div class="col-12 col-xs-5 hidden-md-down col-lg-5">
-                                      <div id="top5-managers-picture" style="display: block;"><img id="top-manager" src="assets/img/about/person5.png" style="display: block;" class="img-fluid">
+                                      <div id="top5-managers-picture" style="display: block;"><img id="top-manager" src="assets/img/white-helmet.png" style="display: block;" class="img-fluid">
                                         <div class="manager-image-inner">
                                           <div class="number">
                                             <p>5</p>
@@ -1464,7 +1493,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-lg-12 team">
+                <div class="col-lg-12 team no-padding-all-sides">
                   <div class="nl-players-table nl-contests-table homepage-table">
                     <ul role="tablist" class="nav nav-tabs">
                       <li class="nav-item smaller-nav"><a data-toggle="tab" href="#all" role="tab" class="nav-link active">NLC2</a></li>
