--- a/markup/_dist/homepage_soccer.html
+++ b/markup/_dist/homepage_soccer.html
@@ -1612,7 +1612,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-lg-12 team">
+                <div class="col-lg-12 team no-padding-all-sides">
                   <div class="nl-players-table nl-contests-table homepage-table">
                     <ul role="tablist" class="nav nav-tabs">
                       <li class="nav-item smaller-nav"><a data-toggle="tab" href="#all" role="tab" class="nav-link active">NLC2</a></li>
